// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`getSummaryMarkup\` should render the right structure 1`] = `
<Summary
  areOnlyNightPriceAndRatingDisplayed={false}
  locationName="Location"
  nightPrice="200€"
  propertyName="My property"
  ratingNumber={4.3}
>
  <SegmentGroup
    className="is-summary"
    compact={true}
  >
    <div
      className="ui compact segments is-summary"
    >
      <Segment>
        <div
          className="ui segment"
        >
          <Heading
            isColorInverted={false}
            size="medium"
            textAlign={null}
          >
            <Header
              as="h3"
              inverted={false}
              textAlign={null}
            >
              <h3
                className="ui header"
              >
                My property
              </h3>
            </Header>
          </Heading>
        </div>
      </Segment>
      <SegmentGroup
        className="horizontal-wrap"
        horizontal={true}
      >
        <div
          className="ui horizontal segments horizontal-wrap"
        >
          <Segment
            className="is-location-name"
            title="Location"
          >
            <div
              className="ui segment is-location-name"
              title="Location"
            >
              Location
              <Icon
                color="yellow"
                hasBorder={false}
                isCircular={false}
                isColorInverted={false}
                isDisabled={false}
                isLabelLeft={false}
                labelText={null}
                labelWeight={null}
                name="map pin"
                path={null}
                size="small"
              >
                <i
                  className="icon yellow small"
                >
                  <svg
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12,2.72c-3.17,0-5.74,3-5.74,6.69S12,21.28,12,21.28s5.74-8.17,5.74-11.87S15.17,2.72,12,2.72Zm0,9.74a4,4,0,1,1,4-4A4,4,0,0,1,12,12.46Z"
                      fill="currentColor"
                    />
                  </svg>
                </i>
              </Icon>
            </div>
          </Segment>
          <Segment>
            <div
              className="ui segment"
            >
              <Rating
                iconSize="tiny"
                isShowingNumeral={true}
                ratingNumber={4.3}
              >
                4.3
                <Rating
                  clearable="auto"
                  disabled={true}
                  maxRating={5}
                  rating={4}
                  size="tiny"
                >
                  <div
                    className="ui tiny disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                  >
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={1}
                      aria-setsize={5}
                      as="i"
                      index={0}
                      key="0"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      as="i"
                      index={1}
                      key="1"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      as="i"
                      index={2}
                      key="2"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={true}
                      aria-posinset={4}
                      aria-setsize={5}
                      as="i"
                      index={3}
                      key="3"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={true}
                        aria-posinset={4}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={false}
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      as="i"
                      index={4}
                      key="4"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={5}
                        aria-setsize={5}
                        className="icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                  </div>
                </Rating>
              </Rating>
            </div>
          </Segment>
          <Segment>
            <div
              className="ui segment"
            >
              <span>
                from 
                <Heading
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      200€
                    </h4>
                  </Header>
                </Heading>
                /night
              </span>
            </div>
          </Segment>
        </div>
      </SegmentGroup>
    </div>
  </SegmentGroup>
</Summary>
`;

exports[`\`getSummaryMarkup\` should render the right structure if \`areOnlyNightPriceAndRatingDisplayed\` is \`true\` 1`] = `
<Summary
  areOnlyNightPriceAndRatingDisplayed={true}
  locationName="Location"
  nightPrice="200€"
  propertyName="My property"
  ratingNumber={4.3}
>
  <SegmentGroup
    className="is-summary"
    compact={true}
  >
    <div
      className="ui compact segments is-summary"
    >
      <SegmentGroup
        className="horizontal-wrap"
        horizontal={false}
      >
        <div
          className="ui segments horizontal-wrap"
        >
          <Segment>
            <div
              className="ui segment"
            >
              <span>
                from 
                <Heading
                  isColorInverted={false}
                  size="small"
                  textAlign={null}
                >
                  <Header
                    as="h4"
                    inverted={false}
                    textAlign={null}
                  >
                    <h4
                      className="ui header"
                    >
                      200€
                    </h4>
                  </Header>
                </Heading>
                /night
              </span>
            </div>
          </Segment>
          <Segment>
            <div
              className="ui segment"
            >
              <Rating
                iconSize="tiny"
                isShowingNumeral={true}
                ratingNumber={4.3}
              >
                4.3
                <Rating
                  clearable="auto"
                  disabled={true}
                  maxRating={5}
                  rating={4}
                  size="tiny"
                >
                  <div
                    className="ui tiny disabled rating"
                    onMouseLeave={[Function]}
                    role="radiogroup"
                  >
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={1}
                      aria-setsize={5}
                      as="i"
                      index={0}
                      key="0"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={1}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={2}
                      aria-setsize={5}
                      as="i"
                      index={1}
                      key="1"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={2}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={false}
                      aria-posinset={3}
                      aria-setsize={5}
                      as="i"
                      index={2}
                      key="2"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={3}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={true}
                      aria-checked={true}
                      aria-posinset={4}
                      aria-setsize={5}
                      as="i"
                      index={3}
                      key="3"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={true}
                        aria-posinset={4}
                        aria-setsize={5}
                        className="active icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                    <RatingIcon
                      active={false}
                      aria-checked={false}
                      aria-posinset={5}
                      aria-setsize={5}
                      as="i"
                      index={4}
                      key="4"
                      onClick={[Function]}
                      onMouseEnter={[Function]}
                      selected={false}
                    >
                      <i
                        aria-checked={false}
                        aria-posinset={5}
                        aria-setsize={5}
                        className="icon"
                        onClick={[Function]}
                        onKeyUp={[Function]}
                        onMouseEnter={[Function]}
                        role="radio"
                        tabIndex={0}
                      />
                    </RatingIcon>
                  </div>
                </Rating>
              </Rating>
            </div>
          </Segment>
        </div>
      </SegmentGroup>
    </div>
  </SegmentGroup>
</Summary>
`;
